@@ -1,0 +1,9 @@
+
+namespace MultiMC
+{
+	public partial class EditModsDialog
+	{
+		private Gtk.Button buttonCancel;
+		private Gtk.Button buttonOk;
+	}
+}
