@@ -552,24 +552,7 @@
     </child>
   </widget>
   <widget class="Gtk.Window" id="MultiMC.MainWindow" design-size="633 451">
-    <action-group name="Settings Actions">
-      <action id="preferencesAction">
-        <property name="Type">Action</property>
-        <property name="Label" translatable="yes">_Settings</property>
-        <property name="ShortLabel" translatable="yes">_Settings</property>
-        <property name="StockId">gtk-preferences</property>
-        <property name="Tooltip" translatable="yes">Change your settings</property>
-        <signal name="Activated" handler="OnSettingsClicked" />
-      </action>
-      <action id="updateAction">
-        <property name="Type">Action</property>
-        <property name="Label" translatable="yes">Check for _Updates</property>
-        <property name="ShortLabel" translatable="yes">_Updates</property>
-        <property name="StockId">gtk-ok</property>
-        <property name="Tooltip" translatable="yes">Check for updates.</property>
-        <signal name="Activated" handler="OnUpdateClicked" />
-      </action>
-    </action-group>
+    <action-group name="Default" />
     <action-group name="Instance Actions">
       <action id="openInstDirAction">
         <property name="Type">Action</property>
@@ -597,7 +580,24 @@
         <signal name="Activated" handler="OnRefreshClicked" />
       </action>
     </action-group>
-    <action-group name="Default" />
+    <action-group name="Settings Actions">
+      <action id="preferencesAction">
+        <property name="Type">Action</property>
+        <property name="Label" translatable="yes">_Settings</property>
+        <property name="ShortLabel" translatable="yes">_Settings</property>
+        <property name="StockId">gtk-preferences</property>
+        <property name="Tooltip" translatable="yes">Change your settings</property>
+        <signal name="Activated" handler="OnSettingsClicked" />
+      </action>
+      <action id="updateAction">
+        <property name="Type">Action</property>
+        <property name="Label" translatable="yes">Check for _Updates</property>
+        <property name="ShortLabel" translatable="yes">_Updates</property>
+        <property name="StockId">gtk-ok</property>
+        <property name="Tooltip" translatable="yes">Check for updates.</property>
+        <signal name="Activated" handler="OnUpdateClicked" />
+      </action>
+    </action-group>
     <property name="MemberName" />
     <property name="Title" translatable="yes">MainWindow</property>
     <property name="WindowPosition">Center</property>
@@ -608,12 +608,12 @@
       <widget class="Gtk.VBox" id="windowbox">
         <property name="MemberName" />
         <child>
-          <widget class="Gtk.Toolbar" id="toolbar">
+          <widget class="Gtk.Toolbar" id="menuToolbar">
             <property name="MemberName" />
             <property name="ShowArrow">False</property>
             <property name="ButtonStyle">Icons</property>
             <property name="IconSize">SmallToolbar</property>
-            <node name="toolbar" type="Toolbar">
+            <node name="menuToolbar" type="Toolbar">
               <node type="Toolitem" action="newInstAction" />
               <node type="Toolitem" action="openInstDirAction" />
               <node type="Toolitem" action="refreshAction" />
@@ -963,6 +963,63 @@
             <property name="Position">0</property>
             <property name="AutoSize">True</property>
           </packing>
+        </child>
+      </widget>
+    </child>
+    <child internal-child="ActionArea">
+      <widget class="Gtk.HButtonBox" id="dialog1_ActionArea">
+        <property name="MemberName" />
+        <property name="Spacing">10</property>
+        <property name="BorderWidth">5</property>
+        <property name="Size">2</property>
+        <property name="LayoutStyle">End</property>
+        <child>
+          <widget class="Gtk.Button" id="buttonCancel">
+            <property name="MemberName" />
+            <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="UseStock">True</property>
+            <property name="Type">StockItem</property>
+            <property name="StockId">gtk-cancel</property>
+            <property name="ResponseId">-6</property>
+            <property name="label">gtk-cancel</property>
+          </widget>
+          <packing>
+            <property name="Expand">False</property>
+            <property name="Fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="Gtk.Button" id="buttonOk">
+            <property name="MemberName" />
+            <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="UseStock">True</property>
+            <property name="Type">StockItem</property>
+            <property name="StockId">gtk-ok</property>
+            <property name="ResponseId">-5</property>
+            <property name="label">gtk-ok</property>
+          </widget>
+          <packing>
+            <property name="Position">1</property>
+            <property name="Expand">False</property>
+            <property name="Fill">False</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="Gtk.Dialog" id="MultiMC.EditModsDialog" design-size="400 300">
+    <property name="MemberName" />
+    <property name="WindowPosition">CenterOnParent</property>
+    <property name="Buttons">2</property>
+    <property name="HelpButton">False</property>
+    <child internal-child="VBox">
+      <widget class="Gtk.VBox" id="dialog1_VBox">
+        <property name="MemberName" />
+        <property name="BorderWidth">2</property>
+        <child>
+          <placeholder />
         </child>
       </widget>
     </child>
