@@ -1,5 +1,9 @@
 2012-01-29  Andrew Okin  <razorblades13@gmail.com>
 
+	* MainWindow.cs: Fixed dialog window parents
+
+2012-01-29  Andrew Okin  <razorblades13@gmail.com>
+
 	* MultiMC.csproj, MainWindow.cs, Resources.cs,
 	  ChangeIconDialog.cs, MultiMC.MainWindow.cs,
 	  MultiMC.ChangeIconDialog.cs: Added ability to change icons.
